# ft-daedalus

./: .gitignore  README.md  README.zh-CN.md  WECHAT_CHANNEL_RELIABILITY_FUTURE_LANE.md  pyproject.toml
opencode-harness/: MANUAL_ADOPTION.md  README.md
opencode-harness/template/: opencode.json
opencode-harness/template/.opencode/: .gitignore  harness.json  package-lock.json  package.json
opencode-harness/template/docs/: OPENCODE_HARNESS_OVERLAY.md
opencode-harness/template/scripts/: opencode-local.sh  opencode_harness.py  repo_harness.py
ops/systemd/user/: codex-wechat-bridge.service  daedalus-wechat.service
scripts/: doctor.sh  install-user-service.sh
src/codex_wechat_bridge/: __init__.py  cli.py  config.py  daemon.py  delivery_ledger.py  live_session.py  state.py  systemd_notify.py  wechat_api.py
src/daedalus_wechat/: __init__.py  cli.py  cli_backend.py  codex_runner.py  config.py  daemon.py  delivery_ledger.py  ilink_auth.py  incoming_media.py  kairos_readout.py  live_session.py  room_transcript.py  security_drill.py  state.py  wechat_api.py
tests/: test_cli.py  test_cli_backend.py  test_config.py  test_daemon.py  test_delivery_ledger.py  test_ilink_auth.py  test_incoming_media.py  test_kairos_readout.py  test_live_session.py  test_security_drill.py  test_state.py  test_wechat_api.py
var/reports/opencode/: coding_agent_harness_closeout_20260408.md  opencode_gpt_handover_20260408.md  opencode_gpt_validation_20260408.md  opencode_harness_manual_adoption_posture_20260408.md  opencode_todo_lsp_pilot_20260408.md
var/reports/wechat/: wechat_catchup_command_verify_20260328.md  wechat_live_push_context_boundary_20260330.md  wechat_multi_tmux_switch_verify_20260328.md  wechat_opencode_reply_scope_recovery_20260404.md  wechat_owner_facing_backlog_and_log_hardening_20260330.md  wechat_queue_thread_visibility_verify_20260328.md  wechat_recent_catchup_live_correction_20260330.md  (+4 more)
(+26 files in other folders)
