[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-wechat-bridge"
version = "0.1.0"
description = "Bridge a local Codex session into WeChat using the official ilink bot protocol"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
codex-wechat-bridge = "codex_wechat_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
