[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daedalus-wechat"
version = "0.1.0"
description = "Current ft-daedalus tool: a WeChat operator surface for one canonical local tmux live session"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
daedalus-wechat = "codex_wechat_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
