[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daedalus-wechat"
version = "0.1.0"
description = "Current ft-daedalus tool: a WeChat operator surface for one canonical local tmux live session"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
daedalus-wechat = "daedalus_wechat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["var", ".git", ".venv", ".pytest_cache"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP022"]

[tool.ruff.lint.isort]
known-first-party = ["daedalus_wechat"]

[tool.uv]
default-groups = ["dev"]
